@@ -19,6 +19,10 @@ total - sum up columns
 ][
 .B \-o{f|d}
 ][
+.B "\-in M"
+][
+.B "\-on M"
+][
 .B \-tC
 ][
 .B \-N
@@ -110,6 +114,14 @@ If the end of file is reached, the current total is printed
 and the calculation is reset before the next file (with or without the
 .I \-r
 option).
+.PP
+The
+.I \-in
+option if present, will limit the number of input records read
+(per input file).
+The
+.I \-on
+option may be used to limit the total number of outut records produced.
 .PP
 The
 .I \-tC
